# web-mapa-do-bosque

./: .env.example  .gitignore  Dockerfile.ngrok  Makefile  NGROK_DOCKER_GUIDE.md  README.md  main.py  pyproject.toml  run-ngrok-docker.ps1
wbr-streamlit-bigquery/: .dockerignore  .env.example  .gitignore  CHECKLIST.md  CLAUDE.md  Dockerfile  Dockerfile.ngrok  MIGRATION_GUIDE.md  Makefile  NGROK_DOCKER_GUIDE.md  README.md  docker-compose-ngrok.yml  docker-compose.yml  fix-docker-network.sh  implementacoes_futuras.md  list_supabase_tables.py  pyproject.toml  refactor_structure.py  requirements.txt  run-ngrok-docker.ps1  test_api_discovery.py  test_direct_api.py  test_instagram_data.py  test_supabase_connection.py
wbr-streamlit-bigquery/.knowledge/: knowledge_graph_export.md
wbr-streamlit-bigquery/.streamlit/: config.toml
wbr-streamlit-bigquery/notebooks/: exploration.ipynb
wbr-streamlit-bigquery/scripts/: check_database.py  test_apple_to_apple.py  test_date_filter.py  test_kpi_consistency.py  test_visual_fixes.py  test_wbr_integration.py
wbr-streamlit-bigquery/src/: main.py
wbr-streamlit-bigquery/src/app/: streamlit_app.py
wbr-streamlit-bigquery/src/app/pages/: .01_wbr.py  01_Overview.py
wbr-streamlit-bigquery/src/clients/database/: bigquery.py  factory.py  supabase_postgres.py
wbr-streamlit-bigquery/src/config/: constants.py  settings.py
wbr-streamlit-bigquery/src/core/: charts.py  kpis.py  processing.py  wbr.py  wbr_metrics.py  wbr_utility.py
wbr-streamlit-bigquery/src/data/: bigquery_client.py  database_factory.py  postgresql_client.py
wbr-streamlit-bigquery/src/ui/: components.py  layouts.py
wbr-streamlit-bigquery/src/utils/: env.py  logging.py
wbr-streamlit-bigquery/src/wbr/: __init__.py  charts.py  core.py  kpis.py  processing.py
wbr-streamlit-bigquery/tests/: conftest.py  test_bigquery_client.py  test_date_comparison.py  test_kpis.py  test_processing.py  test_wbr_integration.py  test_wbr_metrics.py
(+38 files in other folders)
