[project]
name = "wbr-dashboard"
version = "2.0.0"
description = "Dashboard WBR com suporte para BigQuery e PostgreSQL"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "plotly>=5.14.0",
    "streamlit-plotly-events",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.2",
    "supabase>=2.0.0",
    "extra-streamlit-components>=0.1.81",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
