[tool.poetry]
name = "wbr-streamlit-bigquery"
version = "0.1.0"
description = "A Streamlit application for visualizing WBR (Working Backwards) metrics using data from BigQuery."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.0.0"
pandas = "^1.3.0"
numpy = "^1.21.0"
google-cloud-bigquery = "^2.30.0"
plotly = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"