[tool.poetry]
name = "wbr-dashboard"
version = "2.0.0"
description = "Dashboard WBR com suporte para BigQuery e PostgreSQL"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.28.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
plotly = "^5.0.0"
psycopg2-binary = "^2.9.0"
sqlalchemy = "^2.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
